removed demo6 and demo6b because of java version